# gaw-qc

./: .gitignore  Dockerfile  README.md  app.py  compose.yaml  pyproject.toml  requirements.txt
assets/: style.css
examples/: Jungfraujoch_CH4_20230101-20230630.csv  Jungfraujoch_CH4_20240101-20240331.csv  Jungfraujoch_CO2_20230101-20230630.csv  Jungfraujoch_CO2_20240101-20240331.csv  data_source.txt
src/gaw_qc/: app_factory.py  wsgi.py
src/gaw_qc/assets/css/: style.css
src/gaw_qc/config/: app_config.py
src/gaw_qc/data/: classes.py  data.py  export.py  modelling.py  preparation.py  sources.py  stats.py  utils.py
src/gaw_qc/db/: variables.py
src/gaw_qc/log_utils/: decorators.py  monitoring.py
src/gaw_qc/models/: model_config.py  models.py
src/gaw_qc/pages/components/: collapses.py  header.py  input_form.py  intro.py  modals.py  panels.py
src/gaw_qc/pages/main/: layout.py
src/gaw_qc/plotting/: aesthetics.py  base_plots.py  map.py  plots.py
src/gaw_qc/time_utils/: manipulation.py  timestamps.py
