[project]
name = "gaw_qc"
version = "0.5.0"
requires-python = ">=3.10"
authors = [
    { name = "Yuri Brugnara", email = "yuri.brugnara@empa.ch" },
    { name = "Simone Baffelli", email = "simone.baffelli@empa.ch" },
]
description = "Quality control of GAW data"



dependencies = [
    "dash == 2.17.0",
    "dash-core-components == 2.0.0",
    "dash-html-components==2.0.0",
    "dash-bootstrap-components==1.6.0",
    "dash-daq==0.5.0",
    "flask==3.0.3",
    "flask-caching==1.10.1",
    "plotly==5.24.0",
    "numpy==1.25.2",
    "pandas==2.1.1",
    "statsmodels==0.14.0",
    "pyod==1.0.9",
    "scikit-learn==1.3.0",
    "gunicorn==20.1.0",
    "xarray==2024.6.0",
    "sqlalchemy==2.0.31",
    "pydantic==2.8",
    "pydantic-settings==2.3.4 ",
    "xarray[complete] == 2024.6.0",
    "openpyxl==3.0.10"
]

[project.optional-dependencies]
dev = ["dash[testing]==2.17.0", "werkzeug==3.0.3"]


[project.scripts]
app = "gaw_qc.app_factory:main"
